--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -151,15 +151,8 @@ Since the parallel architecture used in our algorithm is somewhat heterogeneous,
 
 Moreover, since DaE is not deterministic, we carried out 11 runs and took the median cost as the result for that instance and that parameter-settings.
 
-
-\section{Results}
-\label{section:results}
-
-In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each domain, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of evaluations as a terminating criterion 11 runs were carried out for each instance on our own, dedicated server to measure the median of number of evaluations with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set on any computer. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
-
- \begin{table*}[ht]
+\begin{table*}[ht]
 \centering
-
 \begin{tabular}{l c c c c c c c}
 \hline\hline
 Name & numiter & size of training & size of test &  ANN-error & Q in LAO & Q of ANN on train & Q of ANN on test \\ 
@@ -216,6 +209,12 @@ Number of offsprings& 100& 2000& 700 \\
 \label{table:parameters}
 \end{table*} 
 
+\section{Results}
+\label{section:results}
+
+In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each domain, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of evaluations as a terminating criterion 11 runs were carried out for each instance on our own, dedicated server to measure the median of number of evaluations with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set on any computer. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
+
+
 Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could only use all of the training instances in the domain Freecell. In the other domains we got much less usable instances. The Mean Square Error (MSE) of the retrained ANN is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
 
 5 iterations of CMA-ES were carried out, followed by one ANN and one Genetranferer, and this cycle was iterated in the algorithm. This means that for example for the Grid domain that LaO was running for 10 itarations and CMA-ES was called 50 times in total. One has to note that this is not much, but we were restricted by time.
@@ -228,7 +227,7 @@ Termination criterion in the competition was simply the available time, the algo
 
 The controlled parameters of DAEx are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature-set consists of 12 features. First there are 5 important features: the number of fluents, goals, predicates, objects and types. These were extracted from the domain file or the instance file using the PDDL parser. One further feature we think could even be more important is called mutex-density, which is the number of mutexes divided by the number of all fluent-pairs. We also kept 6 less important features: number of lines, words and byte-count - obtained by the linux command called "wc" - of the instance and the domain file. These features were kept only for historical reasons: they were used in the beginning as some "dummy" features.
 
-Since testing was also carried out on the cluster, the termination criterion for testing was also the number of evaluations fixed for each instance. For evaluation the quality-ratio metric as used as in IPC competitions. As a baseline we took the default parameter-setting. The ratio of the fitness value for the best parameters and the default parameters was computed. Note that since our termination criterion is number of evaluations, there was no unsolved instance. If an instance was unsolvable, it was dropped, if it was solvable, it is also solvable with any parameter-setting, moreover the running time does not depend on the computer. 
+Since testing was also carried out on the cluster, the termination criterion for testing was also the number of evaluations fixed for each instance. For evaluation the quality-ratio metric as used as in IPC competitions. As a baseline we took the default parameter-setting. The ratio of the fitness value for the default parameter and the tuned parameter was computed and average was taken over the instances in the train or test-set. Note that since our termination criterion is number of evaluations, there was no unsolved instance. If an instance was unsolvable, it was dropped, if it was solvable, it is also solvable with any parameter-setting, moreover the running time does not depend on the computer. 
 
 Table \ref{table:domains} shows our results. We present several quality-ratios. "In LaO" means that the best found parameter is compared to the default. By definition this ratio can not be less than 1 for any instance. We also present quality-ratios for the retrained ANN on the training-set and the test-set. In this case, numbers less then 1 are possible, but were rare. As it can be seen we achieved a considerable quality-gain in training, but the transfer this improvement to the ANN-model was only partial. Reasons for this may be different. First, there is the unambiguity of the mapping, second, the ANN may not be complex enough for the mapping, but most probably the feature-set is not powerful enough. 
 
