--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -119,3 +119,41 @@
   pages={150-159},
   publisher={AAAI Press}
 }
+
+@Article{	  ff:jair01,
+  author	= {J. Hoffmann and B. Nebel},
+  title		= {The {FF} Planning System: {F}ast Plan Generation Through
+		  Heuristic Search},
+  journal	= {Journal of Artificial Intelligence Research},
+  year		= {2001},
+  volume	= {14},
+  pages		= {253-302}
+}
+
+@inproceedings{rintanen:acai2010,
+  author    = {Jussi Rintanen},
+  title     = {Heuristic Planning with SAT: {B}eyond Uninformed Depth-First
+               Search},
+  booktitle = {Proc. 23rd Australasian Conference on Artificial Intelligence (ACAI-2010)},
+  year      = {2010},
+  pages     = {415-424},
+}
+
+@Article{	  ipc4:jair05,
+  author	= {J. Hoffmann and S. Edelkamp},
+  title		= {The Deterministic Part of {IPC}-4: {A}n Overview},
+  journal	= {Journal of Artificial Intelligence Research},
+  year		= {2005},
+  volume	= {24},
+  pages		= {519--579}
+}
+
+@Article{	  lama:jair2010,
+  author	= {S. Richter and M. Westphal},
+  title		= {The {LAMA} Planner: {G}uiding Cost-Based Anytime Planning
+		  with Landmarks},
+  journal	= {Journal of Artificial Intelligence Research},
+  volume	= {39},
+  year		= {2010},
+  pages		= {127-177}
+}
