--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -156,7 +156,7 @@ Mprime & 8 & 64 & 152 & 0.08 & 1.11 & 1.05 & 1.04   \\
 Sokoban & 8 & 32 & 52 & 0.11 & 	 &  &   \\
 \hline
 \end{tabular}
-\caption{Domains: note that only the actually usable training instances are shown. numiter=number of iterations. Size of train specifies the number of train instances. ANN-error is given as MSE, returned by FANN. Q=quality-improvement ratio. "In Lao" means best found parameter-set in LaO.}
+\caption{Domains: note that only the actually usable training instances are shown. numiter=number of LaO iterations. Size of train specifies the number of train instances. ANN-error is given as MSE, returned by FANN. Q=quality-improvement ratio. "In Lao" means best found parameter-set in LaO.}
 \label{table:domains}
 \end{table*} 
 
