--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.bib
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.bib
@@ -869,7 +869,7 @@
 }
 
 @InProceedings{ Bardenet,
-	author = "R. Bardenet and B. Kégl",
+	author = "R. Bardenet and B. K{\'e}gl",
 	title = "Surrogating the surrogate: accelerating Gaussian-process-based global optimization with a mixture cross-entropy algorithm",
 	booktitle = "Proceedings of the 27th International Conference on Machine Learning (ICML 2010)",
 	year = "2010",
