previous work parallel planning

--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -134,7 +134,7 @@
   author    = {Jussi Rintanen},
   title     = {Heuristic Planning with SAT: {B}eyond Uninformed Depth-First
                Search},
-  booktitle = {Proc. 23rd Australasian Conference on Artificial Intelligence (ACAI-2010)},
+  booktitle = {Proc. of the 23rd Australasian Conference on Artificial Intelligence (ACAI-2010)},
   year      = {2010},
   pages     = {415-424},
 }
@@ -156,4 +156,50 @@
   volume	= {39},
   year		= {2010},
   pages		= {127-177}
+}
+
+@article{ PRA-star,
+  author    = {M. P. Evett and J. A. Hendler and A. Mahanti and D. S. Nau},
+  title     = {{PRA*}: {M}assively Parallel Heuristic Search},
+  journal   = {J. Parallel Distrib. Comput.},
+  volume    = {25},
+  number    = {2},
+  year      = {1995},
+  pages     = {133-143},
+}
+
+@inproceedings{TDS,
+  author    = {J. W. Romein and A. Plaat and H. E. Bal and J. Schaeffer},
+  title     = {Transposition Table Driven Work Scheduling in Distributed Search},
+  booktitle = {Proc. of the 16th National Conference on Artificial Intelligence (AAAI-1999) },
+  year      = {1999},
+  pages     = {725-731},
+}
+
+@inproceedings{PFADDD,
+  author    = {R. Niewiadomski and J. N. Amaral and R. C. Holte},
+  title     = {Sequential and Parallel Algorithms for Frontier {A}* with
+               Delayed Duplicate Detection},
+  booktitle = {Proc. of the 21st National Conference on Artificial Intelligence (AAAI-2006) },
+  year      = {2006},
+}
+
+@inproceedings{ HDA-star,
+  author	= {A. Kishimoto and A. S. Fukunaga and A. Botea},
+  title		= {Scalable, Parallel Best-First Search for Optimal
+		  Sequential Planning},
+  booktitle	= {Proc. of the 19th International Conference on Automated Planning and Scheduling (ICAPS-2009)},
+  year		= {2009},
+  pages		= {10-17}
+}
+
+@InProceedings{	  dovetailing,
+  author	= {R. Valenzano and N. Sturtevant and J. Schaeffer and K.
+		  Buro and A. Kishimoto},
+  title		= {Simultaneously Searching with Multiple Settings: {A}n
+		  Alternative to Parameter Tuning for Suboptimal Single-Agent
+		  Search Algorithms},
+  booktitle	= {Proc. ICAPS},
+  year		= {2010},
+  pages		= {177-184}
 }
