Divide and Evolve section update

--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -120,6 +120,27 @@
   publisher={AAAI Press}
 }
 
+% Planning
+
+@Article{pddl:jair2003,
+  author={M. Fox and D. Long},
+  title={{PDDL2.1: An extension to {PDDL} for expressing temporal planning domains}},
+  journal={Journal of Artificial Intelligence Research},
+	volume={20},
+	pages={61-124},
+  year={2003}
+}
+
+@InProceedings{h1:aips2000,
+  author={P. Haslum and H. Geffner},
+  title={Admissible {H}euristics for {O}ptimal {P}lanning},
+  booktitle={AIPS-2000},
+  pages={70-82},
+  year=2000
+}
+
+}
+
 @Article{	  ff:jair01,
   author	= {J. Hoffmann and B. Nebel},
   title		= {The {FF} Planning System: {F}ast Plan Generation Through
