--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -47,7 +47,10 @@
 
 \documentclass{sig-alternate}
 \usepackage{url}
+\usepackage{algorithm}
+\usepackage[noend]{algorithmic}
 \usepackage{subfigure}
+
 %\documentclass{acm_proc_article-sp}
 %\def\BibTeX{Bib\TeX}
 %\parindent=0pt
@@ -517,7 +520,7 @@ Regarding dynamic scheduling, during the runtime if one processus has finished t
 
 % some hypotheses
 
-Two hypotheses have driven us to test the dynamic scheduling. The first one consists to say that as long as we are using a problem solved in a variable time, the dynamic scheduling should be faster than the static scheduling does. The second one assumes that we use a population size higher than the number of cores available, the dynamic mode sould bring a better efficiency.
+Two hypotheses have driven us to test the dynamic scheduling. The first one consists to say that as long as we are using a problem solved in a variable time, the dynamic scheduling should be faster than the static scheduling does. The second one assumes that we use a population size higher than the number of cores available, the dynamic mode should bring a better efficiency.
 
 % less time consuming
 
