--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -432,16 +432,12 @@ void apply< EOT >( eoUF< EOT, void >& proc,
 
 % FIXME: .out empty, why ?!?
 
-<<<<<<< .mine
-\paragraph{Speed-up against nb of cores} % (CC, JD)
-
-=======
 \paragraph{Measures}
 
 % wall-clock: pourquoi wall-clock est pas user-time ...
 % lister les mesures
 
-Here is the three equations of measure used: the speedup, the efficienty and the advanced speedup introduced by the Amdhal's law.
+Here is the three equations of measure used: the speedup, the efficiency and the advanced speedup introduced by the Amdhal's law.
 
 $$Speedup\ measure = r \sum^{P,d}_{k=0,l=0} S_{p_{kl}}$$
 
@@ -504,7 +500,7 @@ Figure \ref{fig:proc_static_vs_dynamic} shows that the dynamic parallelization
 scheme does not permits a significant speed-up comparing to the static one. The
 Wilcoxon signed-rank test cannot reject the null hypothesis that the samples come
 from the same distribution ($$p=0.03$$).
- 
+
 \paragraph{Speed-up against pop size} % (CC, JD)
 
 \begin{figure}[htpb]
